fixed overflowing in device toolbar (and maybe in some phones)

--- a/css/main.css
+++ b/css/main.css
@@ -17,15 +17,8 @@
 /*wyłącza horizontal scroll bar*/
 html, body
 {
-	/*this*/
 	width: 100% !important;
 	max-width: 100% !important;
-    height: 100% !important;
-}
-body
-{
-	/*this*/
-	overflow-x: hidden !important;
 }
 /* For mobile phones: */
 [class*="col-"] {
